# ClockworkEngine

./: CMakeLists.txt  Unix-BuildDebug.sh  Windows-GenVisualStudioProject.bat
cmake/: FindASSIMP.cmake  FindGLEW.cmake  FindSDL2.cmake
lib/Assimp/lib/x86/: assimp.lib
src/: CMakeLists.txt
src/Test/: main.cpp
src/editor/: CMakeLists.txt  main.cpp
src/engine/: 3DEngine.h  CMakeLists.txt  main.cpp
src/engine/Include/components/: meshRenderer.h  physicsObjectComponent.h
src/engine/Include/core/: coreEngine.h  entityComponent.h  input.h  mappedValues.h  math3d.h  util.h
src/engine/Include/physics/: aabb.h  boundingSphere.h  collider.h  intersectData.h  plane.h
src/engine/Include/rendering/: mesh.h  texture.h  window.h
src/engine/Include/staticLibs/: simdaccel.h  simddefines.h  x86simdaccel.h
src/engine/Source/: testing.cpp
src/engine/Source/components/: freeLook.cpp  freeMove.cpp  physicsEngineComponent.cpp  physicsObjectComponent.cpp
src/engine/Source/core/: coreEngine.cpp  entity.cpp  game.cpp  input.cpp  mappedValues.cpp  math3d.cpp  profiling.cpp  timing.cpp  transform.cpp  util.cpp
src/engine/Source/physics/: aabb.cpp  boundingSphere.cpp  collider.cpp  physicsEngine.cpp  physicsObject.cpp  plane.cpp
src/engine/Source/rendering/: camera.cpp  lighting.cpp  material.cpp  mesh.cpp  renderingEngine.cpp  shader.cpp  texture.cpp  window.cpp
src/engine/Source/staticLibs/: stb_image.c
src/engine/components/: freeLook.h  freeMove.cpp  freeMove.h  physicsEngineComponent.h
src/engine/core/: entity.h  game.h  profiling.h  timing.h  transform.h  util.h
src/engine/physics/: physicsObject.h
src/engine/rendering/: camera.h  lighting.h  material.cpp  material.h  mesh.h  renderingEngine.cpp  renderingEngine.h  shader.cpp  shader.h  texture.h  window.h
src/engine/staticLibs/: simdemulator.h
src/player/: main.cpp
